[package]
name = "topcoat-runtime"
version.workspace = true
edition.workspace = true

[features]
discover = ["dep:inventory"]
router = [
	"dep:topcoat-router",
]

[dependencies]
topcoat-asset.workspace = true
topcoat-core.workspace = true
topcoat-router = { workspace = true, optional = true }
topcoat-view.workspace = true

inventory = { workspace = true, optional = true }
ref-cast.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
topcoat = { workspace = true, features = ["runtime"] }

[lints]
workspace = true
