[package]
name = "topcoat-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
discover = ["dep:inventory"]
router = [
	"dep:topcoat-router",
]

[dependencies]
topcoat-asset.workspace = true
topcoat-core.workspace = true
topcoat-router = { workspace = true, optional = true }
topcoat-view.workspace = true

inventory = { workspace = true, optional = true }
ref-cast.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
