[package]
name = "topcoat-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []

view = [
	"dep:topcoat-view",
]

[dependencies]
topcoat-core.workspace = true
topcoat-view = { workspace = true, optional = true }

[dev-dependencies]
topcoat = { workspace = true, features = ["session"] }

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["topcoat"]
