[package]
name = "topcoat-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
cookie = [
	"dep:topcoat-cookie",
]
router = [
	"dep:topcoat-router",
]
view = [
	"dep:topcoat-view",
]

[dependencies]
topcoat-cookie = { workspace = true, optional = true }
topcoat-core.workspace = true
topcoat-core-macro.workspace = true
topcoat-router = { workspace = true, optional = true }
topcoat-view = { workspace = true, optional = true }

base64.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
topcoat = { workspace = true, features = ["session"] }

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["topcoat"]
