[package]
name = "topcoat-tailwind"
version = "0.1.0"
edition = "2024"

[features]
default = ["build"]
build = ["dep:thiserror", "dep:ureq"]

[dependencies]
thiserror = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
topcoat = { workspace = true, features = ["tailwind"] }

[lints]
workspace = true
