[package]
name = "topcoat-tailwind"
version = "0.1.0"
edition = "2024"

[features]
default = ["build"]
build = ["dep:topcoat-core", "dep:sha2", "dep:thiserror", "dep:ureq"]

[dependencies]
topcoat-core = { workspace = true, optional = true, features = ["build"] }

sha2 = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
topcoat = { workspace = true, features = ["tailwind"] }

[lints]
workspace = true
