[package]
name = "topcoat-view"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
topcoat-core.workspace = true

memchr.workspace = true
smallvec.workspace = true

[dev-dependencies]
topcoat = { path = "../topcoat", features = ["view"] }

criterion = { workspace = true }

[[bench]]
name = "render"
harness = false

[lints]
workspace = true
