[package]
name = "topcoat-view"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
http = [
	"dep:http",
]

[dependencies]
topcoat-core.workspace = true

http = { workspace = true, optional = true }
itoa.workspace = true
memchr.workspace = true
smallvec.workspace = true

[dev-dependencies]
topcoat = { workspace = true, features = ["view"] }

criterion = { workspace = true }

[[bench]]
name = "render"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
