[package]
name = "topcoat"
version = "0.1.0"
edition = "2024"

[features]
default = [
	"asset",
	"cookie",
	"router",
	"runtime",
	"view",
	"discover",
]

asset = [
	"dep:topcoat-asset",
]
cookie = [
	"dep:topcoat-cookie",
]
discover = [
	"dep:inventory",
	"topcoat-router-macro?/discover",
	"topcoat-router?/discover",
	"topcoat-runtime?/discover",
	"topcoat-view?/discover",
]
multipart = [
	"router",
	"topcoat-router/multipart",
]
router = [
	"dep:topcoat-router",
	"dep:topcoat-router-macro",
	"view",
	"topcoat-asset?/router",
	"topcoat-cookie?/router",
	"topcoat-runtime?/router",
]
runtime = [
	"dep:topcoat-runtime",
	"dep:topcoat-runtime-macro",
]
tailwind = [
	"dep:topcoat-tailwind",
]
view = [
	"dep:topcoat-view",
	"dep:topcoat-view-macro",
	"topcoat-asset?/view",
]

# Declares this crate as a topcoat-ui component registry: `topcoat ui` reads the
# `registry.toml` (and component sources) under this directory, relative to the
# crate root. A crate is usable as a registry only if it carries this key.
[package.metadata.topcoat-ui]
registry = "src/ui"

[dependencies]
topcoat-asset = { workspace = true, optional = true }
topcoat-cookie = { workspace = true, optional = true }
topcoat-core.workspace = true
topcoat-core-macro.workspace = true
topcoat-router = { workspace = true, optional = true }
topcoat-router-macro = { workspace = true, optional = true }
topcoat-runtime = { workspace = true, optional = true }
topcoat-runtime-macro = { workspace = true, optional = true }
topcoat-tailwind = { workspace = true, optional = true }
topcoat-view = { workspace = true, optional = true }
topcoat-view-macro = { workspace = true, optional = true }

axum.workspace = true
futures-util.workspace = true
inventory = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-tungstenite.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
