[package]
name = "topcoat"
version = "0.1.0"
edition = "2024"

[features]
default = [
	"asset",
	"cookie",
	"font",
	"router",
	"runtime",
	"view",
	"discover",
]

asset = [
	"dep:topcoat-asset",
	"topcoat-font?/asset",
	"topcoat-font-macro?/asset",
	"topcoat-font-fontsource?/asset",
	"topcoat-font-fontsource-macro?/asset",
]
cookie = [
	"dep:topcoat-cookie",
]
discover = [
	"dep:inventory",
	"topcoat-font?/discover",
	"topcoat-router?/discover",
	"topcoat-router-macro?/discover",
	"topcoat-runtime?/discover",
	"topcoat-runtime-macro?/discover",
]
font = [
	"dep:topcoat-font",
	"dep:topcoat-font-macro",
]
font-fontsource = [
	"font",
	"dep:topcoat-font-fontsource",
	"dep:topcoat-font-fontsource-macro",
]
htmx = [
	"dep:topcoat-htmx",
]
multipart = [
	"router",
	"topcoat-router/multipart",
]
router = [
	"dep:topcoat-router",
	"dep:topcoat-router-macro",
	"dep:futures-util",
	"dep:tokio",
	"dep:tokio-tungstenite",
	"view",
	"topcoat-asset?/router",
	"topcoat-cookie?/router",
	"topcoat-font?/router",
	"topcoat-runtime?/router",
]
runtime = [
	"dep:topcoat-runtime",
	"dep:topcoat-runtime-macro",
]
tailwind = [
	"dep:topcoat-tailwind",
]
view = [
	"dep:topcoat-view",
	"dep:topcoat-view-macro",
	"topcoat-asset?/view",
	"topcoat-font?/view",
]

# Declares this crate as a topcoat-ui component registry: `topcoat ui` reads the
# `registry.toml` (and component sources) under this directory, relative to the
# crate root. A crate is usable as a registry only if it carries this key.
[package.metadata.topcoat-ui]
registry = "src/ui"

[dependencies]
topcoat-asset = { workspace = true, optional = true }
topcoat-cookie = { workspace = true, optional = true }
topcoat-core.workspace = true
topcoat-core-macro.workspace = true
topcoat-font = { workspace = true, optional = true }
topcoat-font-macro = { workspace = true, optional = true }
topcoat-font-fontsource = { workspace = true, optional = true }
topcoat-font-fontsource-macro = { workspace = true, optional = true }
topcoat-htmx = { workspace = true, optional = true }
topcoat-router = { workspace = true, optional = true }
topcoat-router-macro = { workspace = true, optional = true }
topcoat-runtime = { workspace = true, optional = true }
topcoat-runtime-macro = { workspace = true, optional = true }
topcoat-tailwind = { workspace = true, optional = true }
topcoat-view = { workspace = true, optional = true }
topcoat-view-macro = { workspace = true, optional = true }

futures-util = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded.workspace = true
tokio = { workspace = true, optional = true, features = ["net"] }
tokio-tungstenite = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
