[package]
name = "topcoat"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
default = [
	"asset",
	"cookie",
	"font",
	"icon",
	"router",
	"runtime",
	"session",
	"view",
	"discover",
]
full = [
	"asset",
	"cookie",
	"discover",
	"font",
	"font-fontsource",
	"htmx",
	"icon",
	"icon-iconify",
	"multipart",
	"router",
	"runtime",
	"session",
	"tailwind",
	"tower",
	"ui",
	"view",
]

asset = [
	"dep:topcoat-asset",
	"topcoat-font?/asset",
	"topcoat-font-macro?/asset",
]
cookie = [
	"dep:topcoat-cookie",
	"topcoat-session?/cookie",
]
discover = [
	"dep:inventory",
	"topcoat-font?/discover",
	"topcoat-router?/discover",
	"topcoat-router-macro?/discover",
	"topcoat-runtime?/discover",
	"topcoat-runtime-macro?/discover",
]
font = [
	"dep:topcoat-font",
	"dep:topcoat-font-macro",
]
font-fontsource = [
	"font",
	"topcoat-font/fontsource",
	"topcoat-font-macro/fontsource",
]
htmx = [
	"dep:topcoat-htmx",
]
icon = [
	"dep:topcoat-icon",
	"dep:topcoat-icon-macro",
	"view",
]
icon-iconify = [
	"icon",
	"topcoat-icon-macro/iconify",
	"topcoat-icon/iconify-build",
]
multipart = [
	"router",
	"topcoat-router/multipart",
]
router = [
	"dep:topcoat-router",
	"dep:topcoat-router-macro",
	"dep:futures-util",
	"dep:tokio",
	"dep:tokio-tungstenite",
	"view",
	"topcoat-asset?/router",
	"topcoat-cookie?/router",
	"topcoat-font?/router",
	"topcoat-runtime?/router",
	"topcoat-session?/router",
]
runtime = [
	"dep:topcoat-runtime",
	"dep:topcoat-runtime-macro",
]
session = [
	"dep:topcoat-session",
]
tailwind = [
	"dep:topcoat-tailwind",
]
tower = [
	"router",
	"topcoat-router/tower",
]
ui = [
	"dep:topcoat-ui-registry",
]
view = [
	"dep:topcoat-view",
	"dep:topcoat-view-macro",
	"topcoat-asset?/view",
	"topcoat-font?/view",
]

[dependencies]
topcoat-asset = { workspace = true, optional = true }
topcoat-cookie = { workspace = true, optional = true }
topcoat-core.workspace = true
topcoat-core-macro.workspace = true
topcoat-font = { workspace = true, optional = true }
topcoat-font-macro = { workspace = true, optional = true }
topcoat-htmx = { workspace = true, optional = true }
topcoat-icon = { workspace = true, optional = true }
topcoat-icon-macro = { workspace = true, optional = true }
topcoat-router = { workspace = true, optional = true }
topcoat-router-macro = { workspace = true, optional = true }
topcoat-runtime = { workspace = true, optional = true }
topcoat-runtime-macro = { workspace = true, optional = true }
topcoat-session = { workspace = true, optional = true }
topcoat-tailwind = { workspace = true, optional = true }
topcoat-ui-registry = { workspace = true, optional = true }
topcoat-view = { workspace = true, optional = true }
topcoat-view-macro = { workspace = true, optional = true }

futures-util = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded.workspace = true
tokio = { workspace = true, optional = true, features = ["net"] }
tokio-tungstenite = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps.ignore]
normal = ["topcoat-ui-registry"]
