[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
topcoat = { workspace = true, features = ["tailwind"] }
uuid = "1.23.1"

[lints]
workspace = true
