[package]
name = "toasty-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
toasty = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
topcoat = { workspace = true }

[lints]
workspace = true
