[package]
name = "toasty-todo"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
toasty = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
topcoat = { workspace = true }

[lints]
workspace = true
