[package]
name = "topcoat-core-grammar"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
pretty = [
	"dep:prettyplease",
	"syn/extra-traits",
	"syn/visit",
	"proc-macro2/span-locations",
]

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

prettyplease = { workspace = true, optional = true }

[lints]
workspace = true
