[package]
name = "topcoat-core-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
topcoat-core = { workspace = true, features = ["parsing"] }

quote.workspace = true
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
topcoat.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
